# aptitude

./: .dir-locals.el  .hgtags  aptitude.spec  configure.ac  help-cs.txt  help-de.txt  help-es.txt  help-eu.txt  help-fi.txt  help-gl.txt  help-it.txt  help-ja.txt  help-pl.txt  help-pt_BR.txt  help-ru.txt  help-sv.txt  help-tr.txt  help-zh_CN.txt  help-zh_TW.txt  help.txt
.gear/: aptitude-0.4.5-alt-gc4.6.patch  aptitude-0.4.5-alt-glibc-2.16.patch  rules
doc/: aptitude-html.xsl  aptitude-man.xsl
po/: POTFILES.in  aptitude.pot  ar.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  lt.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tl.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  apt_config_widgets.cc  apt_config_widgets.h  apt_options.cc  apt_undo_tree.h  aptitude.h  changelog_parse.cc  changelog_parse.h  defaults.cc  dep_item.cc  dep_item.h  desc_parse.cc  desc_parse.h  download_bar.cc  download_bar.h  download_item.cc  download_item.h  download_list.h  download_screen.cc  download_screen.h  download_thread.cc  download_thread.h  load_config.cc  load_grouppolicy.cc  main.cc  (+31 more)
src/generic/apt/: Makefile.am  acqprogress.cc  acqprogress.h  apt.cc  apt.h  apt_undo_group.h  aptcache.cc  aptcache.h  aptitudepolicy.h  config_signal.h  download_install_manager.cc  download_install_manager.h  download_manager.cc  download_signal_log.cc  download_signal_log.h  download_update_manager.cc  download_update_manager.h  infer_reason.cc  log.cc  matchers.cc  matchers.h  pkg_acqfile.cc  pkg_acqfile.h
(+91 files in other folders)
